--- a/styles.css
+++ b/styles.css
@@ -7,4 +7,17 @@ body {
     position: absolute;
     border-radius: 300px;
     background: rgba(255, 166, 0, 0.6);
+    opacity: 0;
+    animation: anim 8s forwards;
+    filter: hue-rotate(0deg);
+}
+
+/*Montée de la bulle + changement de couleur */
+@keyframes anim {
+    to{
+     top: -250px;
+     left: var(--left);  
+     opacity: 1;
+     filter: hue-rotate(720deg);
+    }
 }
